	Belgium). 

	* tabasco: "hclust" objects (use, sp.ind) are reordered using
	weighted means. This is a better method than the unweighted means
	used for reordering of dendrograms. Earlier "hclust" objects were
	changed to dendrograms, but now we provide reorder.hclust() and
	rev.hclust() in vegan, and can use improved method of ordering the
	table.

	* treedive, treedist: default is now match.force = TRUE, and
	treedive() gained new argument 'verbose' to turn of most messages
	-- which is practical in oecosimu().

	* BCI: names checked after http://www.theplantlist.org, but kept
	the old (alphabetic) order of species. The changes are: Abarema
	macradenium -> A. macradenia, Apeiba aspera -> A. glabra,
	Aspidosperma cruenta -> A. desmanthum, Cassipourea ellipitica ->
	C. guianensis, Chlorophora tinctoria -> Maclura t., Coccoloba
	manzanillensis -> C. manzinellensis, Cupania sylvatica ->
	C. seemannii, Dipteryx panamensis -> D. oleifera, Eugenia
	coloradensis -> E. florida, Eugenia oerstedeana -> E. oerstediana,
	Inga marginata -> I. semialata, Lonchocarpus latifolius ->
	L. heptaphyllus (this is ambiguous, since Hebestichma cubense is
	another alternative), Maquira costaricana -> Maquira guianensis
	var. costaricana, Phoebe cinnamomifolia -> Cinnamomum triplinerve,
	Swartzia simplex var. ochnaceae -> var. continentalis, Tabebuia
	guayacan -> Handroanthus g. Guarea is ambiguous: data have three
	taxa (fuzzy, grandifolia and guidonia), but theplantlist.org says
	grandifolia is an ill. synonym of guidonia. This change allows
	matching 206 of 225 BCI species with
	http://datadryad.org/resource/doi:10.5061/dryad.63q27. In
	addition, there are two vars of Swartzia simplex in BCI which
	could be matched at species level.
	
	* dune data sets: use 4+4 letter CEP names for species instead of
	old 3+3 names. Botanical nomenclature was updated: Leontodon
	autumnalis -> Scorzoneroides (Leoaut -> Scorautu), Potentilla